--- a/MagicPlayer/BussinessLogic/BussinessLogic.csproj
+++ b/MagicPlayer/BussinessLogic/BussinessLogic.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="Bid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetOfCards.cs" />
   </ItemGroup>
