--- a/MagicPlayer/BussinessLogic/BussinessLogic.csproj
+++ b/MagicPlayer/BussinessLogic/BussinessLogic.csproj
@@ -41,8 +41,9 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="Bid.cs" />
+    <Compile Include="Distribution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetOfCards.cs" />
+    <Compile Include="Hand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
